[workspace]
members = [
    "tcc-sys"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>",
    "Hao Sun <sunhao.th@gmail.com>"
]

[workspace.dependencies]
eyre = "0.6.12"

[package]
name = "tcc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tcc-sys = { version = "0.1.0", path = "tcc-sys", default-features = false }
unix_path = { version = "1.0.1", default-features = false, features = ["alloc"] }

[features]
default = ["std", "vendored"]
std = ["tcc-sys/std"]
vendored = ["tcc-sys/vendored"]