[package]
name = "tcc-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.147"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
const-random = "0.1.15"
iftree = "1.0.4"
include-flate = "0.1.4"
qp-trie = "0.8.1"
derive_more = "0.99.17"

[build-dependencies]
bindgen = "0.69.1"
cargo-emit = "0.2.1"
cc = "1.0"
cfg-if = "1.0.0"
eyre.workspace = true
fs_extra = "1.3.0"
static_assertions = "1.1.0"
strum = { version = "0.25", features = ["derive"] }

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["vendored", "std", "vfs", "embed-headers", "embed-libraries"]
vendored = []
arch-i386 = []
arch-arm32 = []
arch-arm64 = []
arch-c67 = []
arch-x86_64 = []
arch-rv64 = []
link-pe = []
link-mach-o = []

embed-headers = []
embed-libraries = []
vfs = ["std"]
std = []
