[package]
name = "tcc-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.172"

[build-dependencies]
bindgen = "0.72.0"
cargo-emit = "0.2.1"
cc = "1.2"
cfg-if = "1.0.1"
eyre.workspace = true
static_assertions = "1.1.0"
strum = { version = "0.27", features = ["derive"] }

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["vendored", "std"]
vendored = []
arch-i386 = []
arch-arm32 = []
arch-arm64 = []
arch-c67 = []
arch-x86_64 = []
arch-rv64 = []
link-pe = []
link-mach-o = []

std = []
